Fixed react warnings in storybook and increased spacing between calendar and nav

--- a/packages/bpk-component-calendar/src/bpk-calendar.scss
+++ b/packages/bpk-component-calendar/src/bpk-calendar.scss
@@ -10,7 +10,7 @@
   border-spacing: 0;
 
   .bpk-calendar-nav + & {
-    margin-top: $bpk-spacing-xs;
+    margin-top: $bpk-spacing-sm;
   }
 
   &__header {
